[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Guns/Weap-Pick-20-Grenade.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Explosions/Ex-02-Standard.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Projectiles/Smoke_Blank.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Guns/pin.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Guns/Weap-20-Grenade.png" type="Texture" id=5]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.5

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.0
height = 8.0

[node name="Weap-Pick-20-Grenade" type="RigidBody2D" groups=[
"PickUp",
"FX",
]]
collision_layer = 524288
collision_mask = 786462
mass = 0.204082
physics_material_override = SubResource( 1 )
gravity_scale = 5.0
continuous_cd = 2
contacts_reported = 12
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )
boom = ExtResource( 2 )
smoke = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 2 )
disabled = true

[node name="Sprite_Pin" type="Sprite" parent="."]
position = Vector2( -6, -6 )
texture = ExtResource( 4 )

[node name="Sprite_Body" type="Sprite" parent="."]
texture = ExtResource( 5 )
hframes = 11

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Timer_Hit" type="Timer" parent="."]
wait_time = 0.3

[node name="Timer_Spin" type="Timer" parent="."]
wait_time = 0.1

[node name="Timer_Boom" type="Timer" parent="."]
wait_time = 5.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -3, 8, 2, 8, 4, 5, 4, -1, 2, -7, -2, -7, -5, -1, -5, 5 )
[connection signal="body_exited" from="." to="." method="_on_WeapPick20Grenade_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_Hit" to="." method="_on_Timer_Hit_timeout"]
[connection signal="timeout" from="Timer_Spin" to="." method="_on_Timer_Spin_timeout"]
[connection signal="timeout" from="Timer_Boom" to="." method="_on_Timer_Boom_timeout"]
